<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="app_name_release">DreamDroid</string>
    <string name="app_name_debug">dreamDroid DBG</string>

    <string-array name="servicelist_dedicated">
        <item>Bouquets</item>
        <item>Provider</item>
...
        <item>Nothing</item>
        <item>Standby</item>
        <item>Deep Standby</item>
        <item>Automatic</item>
    </string-array>

    <string name="vps">VPS</string>
    <string name="vps_note">Requires VPS to be enabled in the receiver\'s VPS settings.</string>
    <string name="vps_date">VPS date</string>
    <string name="vps_time">VPS time</string>

    <string name="begin_time">Begin time</string>
    <string name="repeatings">Repeatings</string>
    <string name="end_time">End time</string>
    <string name="time">Time</string>
    <string name="services">Services</string>
    <string name="movies">Movies</string>
    <string name="device_info">Device Information</string>
    <string name="send_message">Send Message</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="get_content_error">Error getting content!</string>
    <string name="content_error_detail" translatable="false">%1$s\n%2$s</string>
    <string name="named_message" translatable="false">%1$s \'%2$s\'</string>
    <string name="zap">Zap</string>
    <string name="browse_epg">Browse EPG</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="epg">EPG</string>
    <string name="epg_list">EPG list</string>
    <string name="epg_prime">Prime</string>
    <string name="epg_timeline">Timeline</string>
    <string name="epg_at_this_time">At this time</string>
    <string name="multiepg">MultiEPG</string>
...
    <string name="port">Port</string>
    <string name="live">Live</string>
    <string name="port_stream_live">Port (Live)</string>
    <string name="port_stream_file">Port (Movies)</string>
    <string name="settings">Settings</string>
    <string name="host_long">Hostname or IP</string>
    <string name="close">Close</string>
    <string name="minutes_short">min.</string>
    <string name="user">User</string>
    <string name="pass">Password</string>
    <string name="show_password">Show password</string>
    <string name="hide_password">Hide password</string>
    <string name="saving">Saving. Please wait&#8230;</string>
    <string name="deleting">Deleting. Please wait&#8230;</string>
    <string name="delete_confirm">Really delete?</string>
    <string name="set_timer">Set Timer</string>
    <string name="reload">Reload</string>
    <string name="recheck">Recheck</string>

    <string-array name="weekdays_short">
        <item>Mo</item>
...
    </string-array>

    <string name="none">None</string>
    <string name="choose_days">Choose days</string>
    <string name="mo_to_fr">Monday to Friday</string>
    <string name="daily">Daily</string>
    <string name="new_timer">New Timer</string>
    <string name="gui_version">GUI version</string>
    <string name="image_version">Image version</string>
    <string name="interface_version">Interface version</string>
    <string name="front_processor_version">Frontprocessor version</string>
    <string name="device_name">Device name</string>
    <string name="frontends">Frontends</string>
...
    <string name="remote_widget_config_title_profile">Select the profile to use with the widget</string>
    <string name="standard">Standard Layout (Full)</string>
    <string name="quickzap">QuickZap Layout (Simple)</string>
    <string name="no_epg_available">Currently there is no EPG-Information available for this channel!</string>
    <string name="movie_detail_pane_empty">Choose Info on a recording to see its details here</string>
    <string name="epg_detail_pane_empty">Choose an event to see its details here</string>
    <string name="ok">OK</string>
    <string name="activate">Activate</string>
    <string name="confirm_delete_profile">Do you really want to delete this profile?</string>
    <string name="profile_activated">Activated profile</string>
    <string name="profile_not_activated">Error activating profile</string>
    <string name="profile_deleted">Deleted profile</string>
    <string name="profile">Profile</string>
...
    <string name="reset_cache_done">Cache reset</string>
    <string name="profile_name">Profile name</string>
    <string name="profile_updated">Updated profile</string>
    <string name="profile_added">Added profile</string>
    <string name="profile_add">Add Profile</string>
    <string name="no_list_item">No items to display&#8230;</string>
    <string name="tags">Tags</string>
    <string name="screenshot">Screenshot</string>
    <string name="host_empty">The host name cannot be empty!</string>
    <string name="standby">Standby</string>
    <string name="restart_gui">Restart GUI</string>
    <string name="reboot">Reboot</string>
    <string name="shutdown">Shutdown</string>
...
    <string name="searching">Searching&#8230;</string>
    <string name="searching_known_devices">Searching for dreamboxes in your local network. This may take a few minutes&#8230;</string>
    <string name="autodiscover_dreamboxes">Dreambox Autodiscovery</string>
    <string name="autodiscovery_failed">Could not autodiscover any dreambox on your local network!</string>
    <string name="add_all">Add All</string>
    <string name="error_parsing">An error occurred on parsing the data!</string>
    <string name="enabled">Enabled</string>
    <string name="signal_meter">Signal Meter</string>
    <string name="title_with_status" translatable="false">%1$s - %2$s</string>
    <string name="accoustic_feedback">Acoustic Feedback</string>
    <string name="leave_confirm">Really leave?</string>
    <string name="leave_confirm_long">Do you really want to leave dreamDroid?</string>
    <string name="sent_as">Sent as %s</string>
...
    <string name="backup_export_missing_permission">Please grant "Storage" permission to use this feature!</string>
    <string name="licenses">Licenses</string>
    <string name="backup_import_error">Backup import failed!</string>
    <string name="tv">TV</string>
    <string name="radio">Radio</string>
    <string name="live_movie"><![CDATA[TV & Movies]]></string>
    <string name="begin_date">Begin date</string>
    <string name="end_date">End date</string>
    <string name="encoder_user">Encoder user</string>
    <string name="encoder_pass">Encoder password</string>
    <string name="dynamic_theme_colors_long">Use dynamic theme colors\nChanging this will RESTART the app!</string>
    <string name="dynamic_theme_colors">Dynamic theme colors</string>
    <string name="trust_all_certs">All certificates</string>
...
