package net.reichholf.dreamdroid.ui.profiles

data class ProfileListItem(val id: Int, val name: String, val host: String, val active: Boolean)
